# 100-days-of-AI

./: README.md  main.py  pyproject.toml
day-02-lcel-execution-model/: LCEL-pipeline-json-struture.py  LCEP-runnable-map.py  README.md  simple-LCEL-pipeline.py
day-03-memory-systems/: README.md  chat_api.py  combined_memory.py  intro_to_memory.py  token_memory.py
day-04-rag-foundations/: README.md  SIMILARITY_METRICS.md
day-05-rag-deep-dive/: 01_CHUNKING_STRATEGIES.md  02_TEXT_TO_NUMBERS.md  03_ATTENTION_AND_TRAINING.md  04_SIMILARITY_AND_MODEL.md  README.md
day-06-multi-doc-research-assistant/: .env.example  README.md  api.py  chunking.py  config.py  document_loader.py  retriever.py  vector_store.py
day-07-revision/: README.md
day-08-hybrid-search/: README.md
day-09-reranking-and-ragas/: README.md
day-10-codebase-intelligence-engine/: README.md  config.py  main.py  pyproject.toml
day-10-codebase-intelligence-engine/api/: routes.py  schemas.py
day-10-codebase-intelligence-engine/chunking/: ast_chunker.py  chunk_models.py
day-10-codebase-intelligence-engine/evaluation/: golden_dataset.json  ragas_eval.py
day-10-codebase-intelligence-engine/generation/: answer_chain.py
day-10-codebase-intelligence-engine/indexing/: embedder.py  qdrant_store.py  sparse_encoder.py
day-10-codebase-intelligence-engine/ingestion/: github_loader.py
day-10-codebase-intelligence-engine/retrieval/: hybrid_search.py  reranker.py
day-10-codebase-intelligence-engine/tests/: debug_embeddings.py  test_step2.py  test_step7.py
day-11-project-verification/: README.md
day-11-project-verification/steps/: test_step1.py  test_step3.py  test_step4.py  test_step5.py  test_step6.py
day-12-langgraph-theory/: README.md
day-13-revision/: README.md
day-14-production-agents/: 01-error-handling-in-tools.md  02-max-iteration-guard.md  03-streaming-responses.md  README.md
day-15-pr-review-agent/: README.md  config.py  main.py  pyproject.toml
day-15-pr-review-agent/agent/: graph.py  state.py
day-15-pr-review-agent/api/: main.py
day-15-pr-review-agent/services/: github.py
day-15-pr-review-agent/tools/: pr_tools.py
day-16-revision-and-state-management/: README.md
day-17-tool-nodes-deep-dive/: README.md
day-18-langgraph-mental-model/: README.md
day-19-resume-screener-agent/: .env.example  DAY_19_RESUME_SCREENER.md  README.md  debug_qdrant.py  main.py  pyproject.toml  test_qdrant_fix.py
day-19-resume-screener-agent/agents/: feedback.py  llm.py  scorer.py  screener.py  state.py
day-19-resume-screener-agent/api/: main.py
day-19-resume-screener-agent/api/routes/: screen.py  search.py
day-19-resume-screener-agent/config/: settings.py
day-19-resume-screener-agent/core/: config.py  llm.py  utils.py
day-19-resume-screener-agent/graph/: pipeline.py
day-19-resume-screener-agent/utils/: pdf_parser.py
day-19-resume-screener-agent/vectorstore/: qdrant.py
