[project]
name = "day-10-codebase-intelligence-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.46",
    "langchain>=0.3.27",
    "langchain-community>=0.3.19",
    "langchain-openai>=0.2.14",
    "langchain-text-splitters>=0.3.11",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.17.0",
    "tiktoken>=0.12.0",
    "tree-sitter>=0.25.2",
]
