[project]
name = "day-10-codebase-intelligence-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.46",
    "langchain>=0.3.27",
    "langchain-community>=0.3.19",
    "langchain-openai>=0.2.14",
    "langchain-text-splitters>=0.3.11",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.17.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.3",
    "tiktoken>=0.12.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
]
